--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html,body {
 
 .bannerBgImage{
     height: 100vh;
-    background: url("bannerImage.jpg");
+    background: url("bannerImage1.jpg");
     background-size: cover;
     position: relative;
 }
